--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kourosh Rahimi
 description: Ph.D. in Physics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/profile-photo.jpeg
 
 #
 # Flags below are optional
@@ -23,10 +23,11 @@ footer-links:
   flickr:
   github: kouroshrahimi
   instagram:
-  linkedin:
+  linkedin: kourosh-rahimi
+  researchgate: Kourosh_Rahimi
   pinterest:
   rss: rss # just type anything here for a working RSS icon
-  twitter:
+  twitter: rahimi_kourosh
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
