--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Kourosh Rahimi
 description: Ph.D. in Physics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/kouroshrahimi/kouroshrahimi.github.io/blob/master/images/profile-photo.jpeg
+avatar: https://raw.githubusercontent.com/kouroshrahimi/kouroshrahimi.github.io/master/images/profile-photo.jpeg
 
 
 #
