--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ footer-links:
   instagram:
   linkedin: kourosh-rahimi
   researchgate: Kourosh_Rahimi
+  medium: kourosh_rahimi
   pinterest:
   rss: rss # just type anything here for a working RSS icon
   twitter: rahimi_kourosh
@@ -43,7 +44,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://kouroshrahimi.ir
+url: https://kouroshrahimi.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
