--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: kouroshrahimi
-  instagram:
-  linkedin: kourosh-rahimi
-  researchgate: Kourosh_Rahimi
-  medium: kourosh_rahimi
-  pinterest:
-  rss: rss # just type anything here for a working RSS icon
-  twitter: rahimi_kourosh
+  github: 
+  instagram: 
+  linkedin: 
+  researchgate: 
+  medium: 
+  pinterest: 
+  rss: # just type anything here for a working RSS icon
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
